erDiagram
    SOURCES {
        uuid id PK
        string identifier
        string name
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    PLATFORMS {
        uuid id PK
        string name
        timestamp created_at
        timestamp updated_at
    }

    CATEGORIES {
        uuid id PK
        string name
        timestamp created_at
        timestamp updated_at
    }

    ARTICLES {
        uuid id PK
        uuid source_id FK
        uuid platform_id FK
        uuid category_id FK
        string external_id
        string author
        string title
        text description
        string url
        text image_url
        longtext content
        timestamp published_at
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    SOURCES ||--o{ ARTICLES : "has many"
    PLATFORMS ||--o{ ARTICLES : "has many"
    CATEGORIES ||--o{ ARTICLES : "has many"
